@@ -4108,8 +4108,8 @@ public class LambdaJ {
     static Object   car(Object o)      { return o == null ? null
                                                           : o instanceof ListConsCell ? ((ListConsCell)o).car()
                                                           : o instanceof ConsCell ? ((ConsCell)o).car()
-                                                          : o instanceof CharSequence ? ((CharSequence)o).length() == 0 ? null : ((CharSequence)o).charAt(0)
-                                                          : o instanceof char[] ? ((char[])o).length == 0 ? null : ((char[])o)[0]
+                                                          //: o instanceof CharSequence ? ((CharSequence)o).length() == 0 ? null : ((CharSequence)o).charAt(0)
+                                                          //: o instanceof char[] ? ((char[])o).length == 0 ? null : ((char[])o)[0]
                                                           : carCdrError(CAR, o); }
 
     static Object   caar(ConsCell c)   { return c == null ? null : car(car(c)); }
@@ -4128,7 +4128,7 @@ public class LambdaJ {
     static Object   cdr(Object o)      { return o == null ? null
                                                           : o instanceof ListConsCell ? ((ListConsCell)o).cdr()
                                                           : o instanceof ConsCell ? ((ConsCell)o).cdr()
-                                                          : o instanceof String ? ((String)o).length() <= 1 ? null : ((String)o).substring(1)
+                                                          //: o instanceof String ? ((String)o).length() <= 1 ? null : ((String)o).substring(1)
                                                           : carCdrError(CDR, o); }
 
     static Object   cdar(ConsCell c)   { return c == null ? null : cdr(car(c)); }
