@@ -2,6 +2,7 @@
 Changes in JMurmel-1.4.7 relative to JMurmel-1.4.6
 
  * changed defun/ define: are now allowed inside labels forms
+ * changed car/ cdr: no longer accept strings
 
  * added macrolet
 
